--- a/README
+++ b/README
@@ -6,6 +6,7 @@ Description:
 
 This project is a collection of website usability evaluation tools. See 
 individual tools' readme files for further information.
+This is an amazing project.
 
 Parts:
 ------
